samples/_failures_safe/1761002041_d82448_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0fc4c76.c: In function ‘main’:
./samples/SAFE/__tmp_d0fc4c76.c:174:25: error: missing terminating " character
  174 |         fprintf(stderr, "Memory allocation
      |                         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d0fc4c76.c:174:9: error: expected expression at end of input
  174 |         fprintf(stderr, "Memory allocation
      |         ^~~~~~~
./samples/SAFE/__tmp_d0fc4c76.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0fc4c76.c:174:9: error: expected declaration or statement at end of input
